--- a/myWebsite/css/slider.css
+++ b/myWebsite/css/slider.css
@@ -57,8 +57,12 @@ body,html{
 }
 .sliders-text{
     position: absolute;
-    top:50%;
+    top:61.8%;
 }
 .sliders-text h1{
+    color: #269abc;
+    font-size: 60px;
+}
+.sliders-text em{
     color: #269abc;
 }
