--- a/Resume/css/style.css
+++ b/Resume/css/style.css
@@ -173,7 +173,7 @@ ul, ol {
 	font-size: 18px;
 }
 .section-title.center {
-	padding: 30px 0;
+	padding:0;
 }
 .section-title h2, .section-title.center h2 {
 	font-weight: 700;
